--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="utf-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-        
+    <div class="header">
+        Header Logo
+    <ul>
+        <li>Header link one</li>
+        <li>Header link two</li>
+        <li>Header link three</li>
+    </ul>
+    <h1>This website is awesome</h1>
+    <div>This wesite has some subtext that goes here under the main 
+        title. It's a smaller font and the color is lower contrast.</div>        
+    </div>
+    <button>Sign up</button>
+    <div>this is a placeholder for an image</div>
+
+    <div class="section-1">   
+    </div>
+
+    <div class="section-2">  
+    </div>
+
+    <div class="section-3">
+    </div>
+
+    <div class="footer"> 
+    </div>
+          
 </body>
 
 </html>
