--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 
 <body>
-    <div class="header">
-        Header Logo
+    <div class="hero">
+    <div class="header">Header Logo
     <ul>
-        <li>Header link one</li>
-        <li>Header link two</li>
-        <li>Header link three</li>
-    </ul>
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+    </ul></div>
     <h1>This website is awesome</h1>
-    <div>This wesite has some subtext that goes here under the main 
-        title. It's a smaller font and the color is lower contrast.</div>        
-    </div>
+    <p>This wesite has some subtext that goes here under the main 
+        title. It's a smaller font and the color is lower contrast.</p>       
     <button>Sign up</button>
     <div>this is a placeholder for an image</div>
+    </div>
 
     <div class="section-1">   
     </div>
