--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <li>header link two</li>
         <li>header link three</li>
     </ul></div>
-    <h1>This website is awesome</h1>
-    <p>This wesite has some subtext that goes here under the main 
+    <div class="container"><div><h1>This website is awesome</h1>
+    <p>This website has some subtext that goes here under the main 
         title. It's a smaller font and the color is lower contrast.</p>       
-    <button>Sign up</button>
-    <div>this is a placeholder for an image</div>
-    </div>
+    <button>Sign up</button></div>
+    <div class="placeholder">this is a placeholder for an image</div>
+    </div></div>
 
     <div class="section-1">   
     </div>
