--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     <div class="placeholder">this is a placeholder for an image</div>
     </div></div>
 
-    <div class="section-1">   
+    <div class="section-1">
+    <div>Some random information</div>
+    <div><div class="box"></div>
+    <p>this is some subtext under an illustration or image</p></div>
+    <div><div class="box"></div>
+    <p>this is some subtext under an illustration or image</p></div>
+    <div><div class="box"></div>
+    <p>this is some subtext under an illustration or image</p></div>
+    <div><div class="box"></div>
+    <p>this is some subtext under an illustration or image</p></div>
     </div>
 
     <div class="section-2">  
