--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div></div>
 
     <div class="section-1">
-    <div>Some random information</div>
+    <div class="title">Some random information.</div>
     <div><div class="box"></div>
     <p>this is some subtext under an illustration or image</p></div>
     <div><div class="box"></div>
