--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
     <div class="section-1">
     <div class="title">Some random information.</div>
-    <div><div class="box"></div>
+    <div class=box-section><div class="box-container"><div class="box"></div>
     <p>this is some subtext under an illustration or image</p></div>
-    <div><div class="box"></div>
+    <div class="box-container"><div class="box"></div>
     <p>this is some subtext under an illustration or image</p></div>
-    <div><div class="box"></div>
+    <div class="box-container"><div class="box"></div>
     <p>this is some subtext under an illustration or image</p></div>
-    <div><div class="box"></div>
+    <div class="box-container"><div class="box"></div>
     <p>this is some subtext under an illustration or image</p></div>
-    </div>
+    </div></div>
 
     <div class="section-2">  
     </div>
