--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <p>this is some subtext under an illustration or image</p></div>
     </div></div>
 
-    <div class="section-2">  
+    <div class="section-2">
+    <p>This is an inspiring quote, or a testimonial from a customer. 
+    Maybe it's just filling up space, or maybe people actually read it.
+    Who knows? All I know is that it looks nice.</p>    
+    <div>-Thor, God of Thunder</div>
     </div>
 
     <div class="section-3">
