--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     </div></div>
 
     <div class="section-2">
-    <p>This is an inspiring quote, or a testimonial from a customer. 
+    <div class="container-2"><p>This is an inspiring quote, or a testimonial from a customer. 
     Maybe it's just filling up space, or maybe people actually read it.
-    Who knows? All I know is that it looks nice.</p>    
-    <div>-Thor, God of Thunder</div>
+    Who knows? All I know is that it looks nice.</p></div>    
+    <div class="thor-container"><div class="thor">-Thor, God of Thunder
+    </div></div>
     </div>
 
     <div class="section-3">
