--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -42,7 +42,12 @@
     </div>
 
     <div class="section-3">
+    <div class="blue-box"><div><div class="call-to-action">
+    Call to action! It's time!</div>
+    <div class="sign-up">Sign up for our product by clicking that 
+    button over there!</div>    
     </div>
+    <button>Sign up</button></div>
 
     <div class="footer"> 
     </div>
