Add the HTML for footer.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     <div class="sign-up">Sign up for our product by clicking that 
     button over there!</div>    
     </div>
-    <button>Sign up</button></div>
+    <button>Sign up</button></div></div>
 
-    <div class="footer"> 
+    <div class="footer"><div class="footer-text">Copyright &copy; 
+    The Odin Project 2021</div> 
     </div>
           
 </body>
