Add the CSS for footer.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <button>Sign up</button></div></div>
 
-    <div class="footer"><div class="footer-text">Copyright &copy; 
+    <div class="footer"><div>Copyright &copy; 
     The Odin Project 2021</div> 
     </div>
           
